--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kolorobot/angular2-typescript-gulp.git"
+    "url": "https://github.com/iRainSystem/angular2-gulp-ts.git"
   },
-  "author": "Rafał Borowiec",
+  "author": "Sergej Shinkarenko",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kolorobot/angular2-typescript-gulp/issues"
+    "url": "https://github.com/iRainSystem/angular2-gulp-ts/issues"
   },
   "dependencies": {
     "@angular/common": "~2.0.1",
